--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
 		</div>
 		
 		<div id="nav">
-		  <a href="the100.html" target="_blank">
+		  <a href="the100.html" >
 		  The 100</a> <br />
-		  <a href="Snowpiercer.html.html" target="_blank">
+		  <a href="Snowpiercer.html.html" >
 		  Snowpiercer</a> <br />
-		  <a href="biuro.html.html" target="_blank" >
+		  <a href="biuro.html.html" >
 		  The Office</a> <br />
 		</div>
 	
